#155: Take fix for chrome-scrollbar from instiki
Fixin instiki: https://github.com/parasew/instiki/commit/5215da4c3dd55d6b3d581a46895d7a5ff7bcba1b

--- a/public/stylesheets/instiki.css
+++ b/public/stylesheets/instiki.css
@@ -428,7 +428,7 @@ border: 1px solid blue;
 }
 
 merror {display:inline;font-size:1em;}
-math[display=block] {overflow:auto;}
+math[display=block] {overflow:auto;overflow-y:hidden}
 math { white-space: nowrap }
 .maruku-eq-number {float:right}
 .maruku-equation {text-align:center}
